--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 <body>
   <header data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.header.partial.html"></header>
   <main>
+    <div data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.product-carousel.partial.html"></div>
+    <div data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.product-carousel-animated.partial.html"></div>
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.products.partial.html"></section>
+    <div data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.accordion-faq.partial.html"></div>
   </main>
   <footer data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.footer.partial.html"></footer>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
